--- a/index.html
+++ b/index.html
@@ -3,17 +3,26 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
+    <link rel="stylesheet" href="frontend/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="frontend/css/app.css" />
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+
+    <div id="app">
+      <h1>{{greeting}}</h1>
+
+    </div>
+
   </body>
 
   <script>
     // You can also require other files to run in this process
-    require('./renderer.js')
+    require('./renderer.js');
+    window.$ = window.jQuery = require('./frontend/js/jquery-3.1.1.min.js');
+    require('./frontend/js/bootstrap.min.js');
+    window.Vue = require('./frontend/js/vue.min.js');
+
+    Main = require('./frontend/js/main.js');
+    Main()
   </script>
 </html>
