--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     window.$ = window.jQuery = require('./frontend/js/jquery-3.1.1.min.js');
     require('./frontend/js/bootstrap.min.js');
-    window.Vue = require('./frontend/js/vue.min.js');
+    window.Vue = require('./frontend/js/vue.js');
 
     Main = require('./frontend/js/main.js');
     Main()
